<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".List">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="170dp"
        android:layout_height="111dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_orange_light"
        android:fontFamily="serif-monospace"
        android:onClick="m"
        android:text="@string/milege"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="170dp"
        android:layout_height="109dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/holo_red_dark"
        android:fontFamily="serif-monospace"
        android:onClick="v"
        android:text="@string/volume"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="231dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:fontFamily="serif-monospace"
        android:onClick="d"
        android:text="@string/distance"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="124dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_purple"
        android:fontFamily="serif-monospace"
        android:onClick="s"
        android:text="@string/speed"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="164dp"
        android:layout_height="103dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_light"
        android:fontFamily="serif-monospace"
        android:onClick="l"
        android:text="@string/locate"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="165dp"
        android:layout_height="103dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="serif-monospace"
        android:onClick="wl"
        android:text="@string/water_level"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="348dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:fontFamily="serif-monospace"
        android:onClick="h"
        android:text="@string/history"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />
</android.support.constraint.ConstraintLayout>