<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="336dp"
        android:layout_height="202dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:background="#fefbfb"
        android:contentDescription="@string/my_car"
        android:onClick="activity1"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13"
        app:srcCompat="@drawable/mycar" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="0dp"
        android:layout_height="163dp"
        android:layout_marginEnd="54dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="100dp"
        android:background="#fbf6f6"
        android:contentDescription="@string/my_bike"
        android:onClick="activity2"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mybike" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:fontFamily="casual"
        android:text="@string/pick_your_vehicle"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />
</android.support.constraint.ConstraintLayout>